--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts_template",
+  "name": "html-ts-template",
   "version": "0.0.1",
   "description": "0.0.1",
   "main": "public/index.js",
